<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="64dp"
    tools:context=".SplashActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/image_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/kertas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="340"
            android:textSize="32sp"
            android:textColor="@color/paper_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/kertas" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/gunting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="340"
            android:textSize="32sp"
            android:textColor="@color/sciccors_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kertas"
            tools:text="@string/gunting" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/batu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="340"
            android:textSize="32sp"
            android:textColor="@color/rock_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gunting"
            tools:text="@string/batu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_splash_screen2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_text" />

</androidx.constraintlayout.widget.ConstraintLayout>